communicate with both side

--- a/client/testTeacher.html
+++ b/client/testTeacher.html
@@ -4,7 +4,8 @@
     </head>
     <body>
        
-        <p>hello </p>
+        <p>I'm Teacher</p>
+        <p id="result">sdf</p>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="src/teacherClient.js"></script>
